# Bjet_MCMC

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.srt  environment.yml  mcmc_config_template.txt  package-lock.json  pyproject.toml  setup.py  test.py
Bjet_02/: 1ES_1215.par  BLLAC.par  HESS_J1943.par  Makefile  NGC_1275.par  OJ_287.par  PKS_0625.par  PKS_1222.par  PMN_J1603.par  TON_599.par  TauEBL.txt  VER_J0521.par  W_Comae.par  bj  bj02.cpp  bj02.h  bj02_old.cpp  bj_new02.cpp  eg02.cpp  gal  galaxy.par  host_gal.py  plmodel.C  processes_supp_v02.cpp  processes_supp_v02.h  read&write_EBL_Finke.py  readdata.C  readdata_old.C  runbj.C  test_data.C
Bjet_02/data/1ES_1215+303/: FermiSEDpts.txt
Bjet_02/data/PKS_0625-354/: PKS0625-354.txt
Bjet_02/display/1ES_1215/: plmodel_1ES_1215.C  readdata_1ES_1215.C  readdata_1ES_1215_2014Flare.C  readdata_1ES_1215_2017Flare.C  (+2 more)
bjet_core/: Makefile  README.md  bj_core  bj_core.cpp  bj_core.h  bj_core.i  bj_core.py  bj_core_wrap.cpp  processes_supp_core.cpp  processes_supp_core.h
bjet_mcmc/: Makefile  README.md  __init__.py  bj_mcmc  bj_mcmc.cpp  bj_mcmc.h  blazar_clean.py  blazar_initialize.py  blazar_mcmc.py  blazar_model.py  blazar_plots.py  blazar_properties.py  blazar_report.py  blazar_run_mcmc.py  blazar_utils.py  p0_file.txt  params.txt  processes_supp_mcmc.cpp  requirements.txt  run_Bjet_manual.py  run_bjet_core_swig.py  user_SED_plot.py
blazar_mcmc/: __init__.py  blazar_clean.py  blazar_initialize.py  blazar_mcmc.py  blazar_model.py  blazar_plots.py  blazar_properties.py  blazar_report.py  blazar_run_mcmc.py  blazar_utils.py  blazars.ipynb  console_data_processing.py  multiple_sources.py  plot_data_with_sources.py  run_Bjet_manual.py  run_mcmc.sh  test_blazar_mcmc.py  test_run_cpp.py  testing.py  user_SED_plot.py
docs/: requirements.txt
docs/source/: Doxyfile  License.rst  api.rst  bjet_core  bjet_core.rst  bjet_mcmc.blazar_clean.rst  bjet_mcmc.blazar_run_mcmc.rst  bjet_mcmc.rst  conf.py  configuration_file.rst  data_format.rst  dependencies  dependencies.rst  dependencies.srt  index.rst  install_and_run.rst  modules.rst  optimization.rst  outputs.rst  usage.rst
log/: CHANGELOG.md
parameter_files/: J1010.par  params.txt
public_results/J1010_3000_steps_2022-02-10-15:41:40/: info.txt
results/b1_eic/: info.txt
results/b1_no_eic/: info.txt
results/b6_eic/: info.txt  information.txt
results/b6_no_eic/: info.txt  information.txt
(+160 files in other folders)
