[project]
name = "Bjet-MCMC" #This is the name of the package to install/uninstall with pip
version = "1.1.0"
description = "BJet-MCMC Python module"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix", ]

[project.urls]
Homepage = "https://bjet-mcmc.readthedocs.io/en/latest/"
Issues = "https://github.com/Ohervet/Bjet_MCMC/issues"

[project.scripts]
blazar_run_mcmc = "bjet_mcmc.blazar_run_mcmc:main_cli"
blazar_mcmc = "bjet_mcmc.blazar_mcmc:main_cli"
blazar_clean = "bjet_mcmc.blazar_clean:clean"
blazar_initialize = "bjet_mcmc.blazar_initialize:initialize"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
bjet_mcmc  = ["*.sh"]
bjet_core = ["*"]
